--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Trust Bet</title>
   </head>
   <body>
+    <div class="gtranslate_wrapper"></div>
     <div id="root"></div>
+    <script>
+        window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr","de","it","es"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"horizontal_position":"left","vertical_position":"bottom"}
+    </script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/flags.js" defer>
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
