--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <!-- <div class=".lang-container">
-    <div class="gtranslate_wrapper"></div> -->
-    <!-- </div> -->
+      <div class="gtranslate_wrapper"></div>
+      </div> -->
     <div id="root"></div>
- <!-- <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr","it","tr","ko","ru","pt","es","ja","vi","zh-CN"],"wrapper_selector":".gtranslate_wrapper","flag_size":24}</script> 
-<script src="https://cdn.gtranslate.net/widgets/latest/popup.js" defer></script>  -->
+    <!-- <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr","it","tr","ko","ru","pt","es","ja","vi","zh-CN"],"wrapper_selector":".gtranslate_wrapper","flag_size":24}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/popup.js" defer></script> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
