--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Trust Bet</title>
 </head>
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-52G6KCRYX0"></script> -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-52G6KCRYX0"></script>
 <script>
-  // window.dataLayer = window.dataLayer || [];
-  // function gtag() { dataLayer.push(arguments); }
-  // gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
 
-  // gtag('config', 'G-52G6KCRYX0');
+  gtag('config', 'G-52G6KCRYX0');
 </script>
 
 <body>
